--- a/index.html
+++ b/index.html
@@ -24,116 +24,126 @@
                 <li><a href="tel:+48111111111">+48 111 111 111</a></li>
             </ul>
         </header>
-        <h1>EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
-        <button type="button">Zamów usługe</button>
+        <main>
+            <section>
+                <h1>EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
+                <button type="button">Zamów usługe</button>
+            </section>
 
-        <section>
-            <ul>
-                <li>LOREM IPSUM</li>
-                <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam
-                    vel arcu sem. Sed non sodales dui. Interdum et malesuada
-                </li>
-                <li>LOREM IPSUM</li>
-                <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam
-                    vel arcu sem. Sed non sodales dui. Interdum et malesuada
-                </li>
-                <li>LOREM IPSUM</li>
-                <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam
-                    vel arcu sem. Sed non sodales dui. Interdum et malesuada
-                </li>
-                <li>LOREM IPSUM</li>
-                <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam
-                    vel arcu sem. Sed non sodales dui. Interdum et malesuada
-                </li>
-            </ul>
-        </section>
+            <section>
+                <ul>
+                    <li>LOREM IPSUM</li>
+                    <li>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Nam vel arcu sem. Sed non sodales dui. Interdum et
+                        malesuada
+                    </li>
+                    <li>
+                        <h3>LOREM IPSUM</h3>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Nam vel arcu sem. Sed non sodales dui. Interdum et
+                        malesuada
+                    </li>
+                    <li>
+                        <h3>LOREM IPSUM</h3>
 
-        <section>
-            <h2>Czym się zajmujemy</h2>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Nam vel arcu sem. Sed non sodales dui. Interdum et
+                        malesuada
+                    </li>
+                    <li>
+                        <h3>LOREM IPSUM</h3>
 
-            <ul>
-                <li>
-                    <img
-                        src="images/img1.jpg"
-                        alt="Programmer is writing a code"
-                        width="370"
-                        height="294"
-                    />
-                </li>
-                <li>
-                    <img
-                        src="images/img2.jpg"
-                        alt="Laptop and smartphone"
-                        width="370"
-                        height="294"
-                    />
-                </li>
-                <li>
-                    <img
-                        src="images/img3.jpg"
-                        alt="ipad with colour palette on the screen"
-                        width="370"
-                        height="294"
-                    />
-                </li>
-            </ul>
-        </section>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Nam vel arcu sem. Sed non sodales dui. Interdum et
+                        malesuada
+                    </li>
+                </ul>
+            </section>
 
-        <section>
-            <h2>Nasz zespół</h2>
-            <ul>
-                <li>
-                    <img
-                        src="images/People/john_doe1.jpg"
-                        alt="A man with glasses"
-                        width="270"
-                        height="260"
-                    />
-                    <p>John Doe</p>
-                    <p>Product Designer</p>
-                </li>
-                <li>
-                    <img
-                        src="images/People/jonh_doe2.jpg"
-                        alt="A happy blonde woman"
-                        width="270"
-                        height="260"
-                    />
-                    <p>John Doe</p>
-                    <p>Frontend Developer</p>
-                </li>
-                <li>
-                    <img
-                        src="images/People/john_doe3.jpg"
-                        alt="A man in blue shirt"
-                        width="270"
-                        height="260"
-                    />
-                    <p>John Doe</p>
-                    <p>Marketing</p>
-                </li>
-                <li>
-                    <img
-                        src="images/People/john_doe4.jpg"
-                        alt="Happy brunet in glasses"
-                        width="270"
-                        height="260"
-                    />
-                    <p>John Doe</p>
-                    <p>UI Designer</p>
-                </li>
-            </ul>
-        </section>
+            <section>
+                <h2>Czym się zajmujemy</h2>
+
+                <ul>
+                    <li>
+                        <img
+                            src="images/img1.jpg"
+                            alt="Programmer is writing a code"
+                            width="370"
+                            height="294"
+                        />
+                    </li>
+                    <li>
+                        <img
+                            src="images/img2.jpg"
+                            alt="Laptop and smartphone"
+                            width="370"
+                            height="294"
+                        />
+                    </li>
+                    <li>
+                        <img
+                            src="images/img3.jpg"
+                            alt="ipad with colour palette on the screen"
+                            width="370"
+                            height="294"
+                        />
+                    </li>
+                </ul>
+            </section>
+
+            <section>
+                <h2>Nasz zespół</h2>
+                <ul>
+                    <li>
+                        <img
+                            src="images/People/john_doe1.jpg"
+                            alt="A man with glasses"
+                            width="270"
+                            height="260"
+                        />
+                        <p>John Doe</p>
+                        <p>Product Designer</p>
+                    </li>
+                    <li>
+                        <img
+                            src="images/People/jonh_doe2.jpg"
+                            alt="A happy blonde woman"
+                            width="270"
+                            height="260"
+                        />
+                        <p>John Doe</p>
+                        <p>Frontend Developer</p>
+                    </li>
+                    <li>
+                        <img
+                            src="images/People/john_doe3.jpg"
+                            alt="A man in blue shirt"
+                            width="270"
+                            height="260"
+                        />
+                        <p>John Doe</p>
+                        <p>Marketing</p>
+                    </li>
+                    <li>
+                        <img
+                            src="images/People/john_doe4.jpg"
+                            alt="Happy brunet in glasses"
+                            width="270"
+                            height="260"
+                        />
+                        <p>John Doe</p>
+                        <p>UI Designer</p>
+                    </li>
+                </ul>
+            </section>
+        </main>
         <footer>
             <a href="/">WebStudio</a>
             <address>
-                m. Warszawa, Aleje Jerozolimskie 21 <br />
-                info@example.com <br />
-                +48 111 111 111
+                <p>m. Warszawa, Aleje Jerozolimskie 21</p>
+                <p>info@example.com</p>
+                <p>+48 111 111 111</p>
             </address>
         </footer>
     </body>
