--- a/index.html
+++ b/index.html
@@ -32,31 +32,37 @@
 
             <section>
                 <ul>
-                    <li>LOREM IPSUM</li>
                     <li>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Nam vel arcu sem. Sed non sodales dui. Interdum et
-                        malesuada
+                        <h3>LOREM IPSUM</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing
+                            elit. Nam vel arcu sem. Sed non sodales dui.
+                            Interdum et malesuada
+                        </p>
                     </li>
                     <li>
                         <h3>LOREM IPSUM</h3>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Nam vel arcu sem. Sed non sodales dui. Interdum et
-                        malesuada
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing
+                            elit. Nam vel arcu sem. Sed non sodales dui.
+                            Interdum et malesuada
+                        </p>
                     </li>
                     <li>
                         <h3>LOREM IPSUM</h3>
-
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Nam vel arcu sem. Sed non sodales dui. Interdum et
-                        malesuada
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing
+                            elit. Nam vel arcu sem. Sed non sodales dui.
+                            Interdum et malesuada
+                        </p>
                     </li>
                     <li>
                         <h3>LOREM IPSUM</h3>
-
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Nam vel arcu sem. Sed non sodales dui. Interdum et
-                        malesuada
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing
+                            elit. Nam vel arcu sem. Sed non sodales dui.
+                            Interdum et malesuada
+                        </p>
                     </li>
                 </ul>
             </section>
